--- a/Exercicios/Sistemas Inteligentes/5 - Pré-processamento.ipynb
+++ b/Exercicios/Sistemas Inteligentes/5 - Pré-processamento.ipynb
@@ -1617,7 +1617,9 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "O método que você utiliza só utiliza dados discretos, então é necessário utilizar esse método. Quando as variaçõse não tem muita importancia, então a discretização diminuiria o número de dados."
+   ],
    "metadata": {}
   },
   {
@@ -1786,9 +1788,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 14,
+   "source": [
+    "from sklearn import datasets\r\n",
+    "from sklearn.neighbors import KNeighborsClassifier\r\n",
+    "from sklearn.model_selection import cross_val_score\r\n",
+    "from sklearn.decomposition import PCA\r\n",
+    "from scipy import stats\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "wine = datasets.load_wine()\r\n",
+    "data = wine.data\r\n",
+    "target = wine.target\r\n",
+    "\r\n",
+    "pca = PCA(n_components=3)\r\n",
+    "\r\n",
+    "classifier = KNeighborsClassifier(n_neighbors=1, weights='distance')\r\n",
+    "\r\n",
+    "pipeline = Pipeline([(\"reduce_dims\", pca), ('estimator', classifier)])\r\n",
+    "\r\n",
+    "scores = cross_val_score(pipeline, data, target, scoring='accuracy', cv=10)\r\n",
+    "\r\n",
+    "mean = scores.mean()\r\n",
+    "std = scores.std()\r\n",
+    "lower, upper = stats.norm.interval(0.95, loc=mean, scale=std/np.sqrt(len(scores)))\r\n",
+    "\r\n",
+    "print(\"Mean: \", mean)\r\n",
+    "print(\"Std: \", std)\r\n",
+    "print(\"Accuracy Confidence Interval (95%%): (%0.2f, %0.2f)\\n\" %(lower, upper))\r\n",
+    "print(scores)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Mean:  0.7202614379084966\n",
+      "Std:  0.11199380257839366\n",
+      "Accuracy Confidence Interval (95%): (0.65, 0.79)\n",
+      "\n",
+      "[0.77777778 0.77777778 0.61111111 0.55555556 0.5        0.77777778\n",
+      " 0.77777778 0.77777778 0.82352941 0.82352941]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1800,7 +1844,9 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "Quando Duas caracteristicas tem alto poder de diferenciação, mas tem alta correlação, fica dificil de classificar, pois essas duas caracteristicas podem resultar em um mesmo resultad"
+   ],
    "metadata": {}
   },
   {
@@ -1819,9 +1865,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 16,
+   "source": [
+    "from sklearn import datasets\r\n",
+    "from sklearn.neighbors import KNeighborsClassifier\r\n",
+    "from sklearn.model_selection import cross_val_score\r\n",
+    "from sklearn.feature_selection import SequentialFeatureSelector\r\n",
+    "from scipy import stats\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "wine = datasets.load_wine()\r\n",
+    "data = wine.data\r\n",
+    "target = wine.target\r\n",
+    "\r\n",
+    "classifier = KNeighborsClassifier(n_neighbors=1, weights='distance')\r\n",
+    "\r\n",
+    "forward = SequentialFeatureSelector(classifier, n_features_to_select=3,\r\n",
+    "                 direction='forward')\r\n",
+    "\r\n",
+    "pipeline = Pipeline([(\"reduce_dims\", forward), ('estimator', classifier)])\r\n",
+    "\r\n",
+    "scores = cross_val_score(pipeline, data, target, scoring='accuracy', cv=10)\r\n",
+    "\r\n",
+    "mean = scores.mean()\r\n",
+    "std = scores.std()\r\n",
+    "lower, upper = stats.norm.interval(0.95, loc=mean, scale=std/np.sqrt(len(scores)))\r\n",
+    "\r\n",
+    "print(\"Mean: \", mean)\r\n",
+    "print(\"Std: \", std)\r\n",
+    "print(\"Accuracy Confidence Interval (95%%): (%0.2f, %0.2f)\\n\" %(lower, upper))\r\n",
+    "print(scores)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Mean:  0.7202614379084966\n",
+      "Std:  0.11199380257839366\n",
+      "Accuracy Confidence Interval (95%): (0.65, 0.79)\n",
+      "\n",
+      "[0.77777778 0.77777778 0.61111111 0.55555556 0.5        0.77777778\n",
+      " 0.77777778 0.77777778 0.82352941 0.82352941]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1841,9 +1930,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1855,7 +1943,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
   }
  },
  "nbformat": 4,
