--- a/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "source": [
     "from sklearn import datasets\r\n",
     "from scipy import stats\r\n",
     "from sklearn.ensemble import BaggingClassifier\r\n",
     "from sklearn.model_selection import RepeatedStratifiedKFold, GridSearchCV, cross_val_score\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
     "import numpy as np\r\n",
     "\r\n",
     "digits = datasets.load_digits()\r\n",
@@ -16,15 +17,15 @@
     "data = digits.data\r\n",
     "\r\n",
     "scaler = StandardScaler()\r\n",
-    "data = scaler.fit_transform(data)\r\n",
-    "\r\n",
     "classifier = BaggingClassifier()\r\n",
     "\r\n",
-    "grade = {'n_estimators': [10, 25, 50, 100]}\r\n",
+    "grade = {'classifier__n_estimators': [10, 25, 50, 100]}\r\n",
+    "\r\n",
+    "pipeline = Pipeline([(\"scaler\", scaler), ('classifier', classifier)])\r\n",
     "\r\n",
     "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=4, random_state=36851234)\r\n",
     "\r\n",
-    "gridSearch = GridSearchCV(classifier, param_grid=grade,\r\n",
+    "gridSearch = GridSearchCV(pipeline, param_grid=grade,\r\n",
     "                          scoring='accuracy', cv=3)\r\n",
     "\r\n",
     "scoresBagging = cross_val_score(\r\n",
@@ -39,17 +40,7 @@
     "print('Std: ', std)\r\n",
     "print('Accuracy Confidence Interval (95%%): (%0.2f, %0.2f)' % (lower, upper))\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Mean : 0.902615470228158\n",
-      "Std:  0.02658335205897871\n",
-      "Accuracy Confidence Interval (95%): (0.87, 0.93)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
