--- a/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
@@ -2,45 +2,201 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "source": [
     "from sklearn import datasets\r\n",
     "from scipy import stats\r\n",
-    "from sklearn.ensemble import BaggingClassifier\r\n",
+    "from sklearn.ensemble import BaggingClassifier, AdaBoostClassifier, RandomForestClassifier\r\n",
     "from sklearn.model_selection import RepeatedStratifiedKFold, GridSearchCV, cross_val_score\r\n",
     "from sklearn.preprocessing import StandardScaler\r\n",
     "from sklearn.pipeline import Pipeline\r\n",
     "import numpy as np\r\n",
     "\r\n",
-    "digits = datasets.load_digits()\r\n",
+    "def Get_Stats(data, target, classifier):\r\n",
+    "    scaler = StandardScaler()\r\n",
+    "    \r\n",
+    "    pipeline = Pipeline([(\"scaler\", scaler), ('classifier', classifier)])\r\n",
+    "\r\n",
+    "    grade = {'classifier__n_estimators': [10, 25, 50, 100]}\r\n",
+    "\r\n",
+    "    gridSearch = GridSearchCV(pipeline, param_grid=grade,\r\n",
+    "                              scoring='accuracy', cv=4)\r\n",
+    "\r\n",
+    "    cv = RepeatedStratifiedKFold(\r\n",
+    "        n_splits=10, n_repeats=3, random_state=36851234)\r\n",
+    "\r\n",
+    "    scores = cross_val_score(\r\n",
+    "        gridSearch, data, target, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\r\n",
+    "\r\n",
+    "    mean = scores.mean()\r\n",
+    "    std = scores.std()\r\n",
+    "    lower, upper = stats.norm.interval(\r\n",
+    "        0.95, loc=mean, scale=std / np.sqrt(len(scores)))\r\n",
+    "\r\n",
+    "    return mean, std, lower, upper\r\n",
+    "\r\n",
+    "def Get_Digits():\r\n",
+    "    digits = datasets.load_digits()\r\n",
+    "    target = digits.target\r\n",
+    "    data = digits.data\r\n",
+    "    return data, target\r\n",
+    "\r\n",
+    "def Get_Wine():\r\n",
+    "    digits = datasets.load_wine()\r\n",
+    "    target = digits.target\r\n",
+    "    data = digits.data\r\n",
+    "    return data, target\r\n",
+    "\r\n",
+    "def Get_Breast_Cancer():\r\n",
+    "    digits = datasets.load_breast_cancer()\r\n",
+    "    target = digits.target\r\n",
+    "    data = digits.data\r\n",
+    "    return data, target\r\n",
+    "\r\n",
+    "\r\n",
+    "def Calculate_Digits_Classifiers():\r\n",
+    "    data, target = Get_Digits()\r\n",
+    "    classifier = BaggingClassifier()\r\n",
+    "    baggingResults = Get_Stats(data, target, classifier)\r\n",
+    "    \r\n",
+    "    data, target = Get_Digits()\r\n",
+    "    classifier = AdaBoostClassifier()\r\n",
+    "    adaBoostResults = Get_Stats(data, target, classifier)\r\n",
+    "    \r\n",
+    "    data, target = Get_Digits()\r\n",
+    "    classifier = RandomForestClassifier()\r\n",
+    "    randomForestResults = Get_Stats(data, target, classifier)\r\n",
+    "\r\n",
+    "    print(baggingResults)\r\n",
+    "    print(adaBoostResults)\r\n",
+    "    print(randomForestResults)\r\n",
+    "\r\n",
+    "def Calculate_Wine_Classifiers():\r\n",
+    "    data, target = Get_Wine()\r\n",
+    "    classifier = BaggingClassifier()\r\n",
+    "    baggingResults = Get_Stats(data, target, classifier)\r\n",
+    "    \r\n",
+    "    data, target = Get_Wine()\r\n",
+    "    classifier = AdaBoostClassifier()\r\n",
+    "    adaBoostResults = Get_Stats(data, target, classifier)\r\n",
+    "    \r\n",
+    "    data, target = Get_Wine()\r\n",
+    "    classifier = RandomForestClassifier()\r\n",
+    "    randomForestResults = Get_Stats(data, target, classifier)\r\n",
+    "\r\n",
+    "    print(baggingResults)\r\n",
+    "    print(adaBoostResults)\r\n",
+    "    print(randomForestResults)\r\n",
+    "\r\n",
+    "def Calculate_Breast_Cancer_Classifiers():\r\n",
+    "    data, target = Get_Breast_Cancer()\r\n",
+    "    classifier = BaggingClassifier()\r\n",
+    "    baggingResults = Get_Stats(data, target, classifier)\r\n",
+    "    \r\n",
+    "    data, target = Get_Breast_Cancer()\r\n",
+    "    classifier = AdaBoostClassifier()\r\n",
+    "    adaBoostResults = Get_Stats(data, target, classifier)\r\n",
+    "    \r\n",
+    "    data, target = Get_Breast_Cancer()\r\n",
+    "    classifier = RandomForestClassifier()\r\n",
+    "    randomForestResults = Get_Stats(data, target, classifier)\r\n",
+    "\r\n",
+    "    print(baggingResults)\r\n",
+    "    print(adaBoostResults)\r\n",
+    "    print(randomForestResults)\r\n",
+    "\r\n",
+    "Calculate_Digits_Classifiers()\r\n",
+    "# Calculate_Wine_Classifiers()\r\n",
+    "# Calculate_Breast_Cancer_Classifiers()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(0.9540078626112146, 0.013197001225008624, 0.9492854631499319, 0.9587302620724973)\n",
+      "(0.26987792261535276, 0.022260493391867975, 0.26191225373275584, 0.2778435914979497)\n",
+      "(0.9747713635423134, 0.01164965549576772, 0.9706026644644434, 0.9789400626201834)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "from sklearn.utils import resample\r\n",
+    "from sklearn import datasets\r\n",
+    "from sklearn.naive_bayes import GaussianNB\r\n",
+    "from sklearn.tree import DecisionTreeClassifier\r\n",
+    "from sklearn.neighbors import KNeighborsClassifier\r\n",
+    "from sklearn.model_selection import cross_val_predict, RepeatedStratifiedKFold\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "import pandas as pd\r\n",
+    "\r\n",
+    "digits = datasets.load_wine()\r\n",
     "target = digits.target\r\n",
     "data = digits.data\r\n",
     "\r\n",
     "scaler = StandardScaler()\r\n",
-    "classifier = BaggingClassifier()\r\n",
     "\r\n",
-    "grade = {'classifier__n_estimators': [10, 25, 50, 100]}\r\n",
+    "for nr_Samples in [1, 3, 5, 7]:\r\n",
+    "    scores = []\r\n",
     "\r\n",
-    "pipeline = Pipeline([(\"scaler\", scaler), ('classifier', classifier)])\r\n",
+    "    for nr_Index in range(nr_Samples):\r\n",
+    "        if nr_Index != 0:\r\n",
+    "            data, target = resample(data, target, random_state=nr_Index-1)\r\n",
     "\r\n",
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=4, random_state=36851234)\r\n",
+    "        gaussianClassifier = GaussianNB()\r\n",
+    "        decisionClassifier = DecisionTreeClassifier()\r\n",
+    "        knnClassifier = KNeighborsClassifier(n_neighbors=1)\r\n",
     "\r\n",
-    "gridSearch = GridSearchCV(pipeline, param_grid=grade,\r\n",
-    "                          scoring='accuracy', cv=3)\r\n",
+    "        # cv = RepeatedStratifiedKFold(\r\n",
+    "        #     n_splits=10, n_repeats=3, random_state=36851234)\r\n",
     "\r\n",
-    "scoresBagging = cross_val_score(\r\n",
-    "    gridSearch, data, target, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\r\n",
+    "        cv = 5\r\n",
     "\r\n",
-    "mean = scoresBagging.mean()\r\n",
-    "std = scoresBagging.std()\r\n",
-    "lower, upper = stats.norm.interval(0.95, loc=mean, scale=std /\r\n",
-    "                          np.sqrt(len(scoresBagging)))\r\n",
+    "        gaussianPipeline = Pipeline([(\"scaler\", scaler), ('classifier', gaussianClassifier)])\r\n",
+    "        decisionPipeline = Pipeline([(\"scaler\", scaler), ('classifier', decisionClassifier)])\r\n",
+    "        knnPipeline = Pipeline([(\"scaler\", scaler), ('classifier', knnClassifier)])\r\n",
     "\r\n",
-    "print('Mean :', mean)\r\n",
-    "print('Std: ', std)\r\n",
-    "print('Accuracy Confidence Interval (95%%): (%0.2f, %0.2f)' % (lower, upper))\r\n"
+    "        gaussianScores = cross_val_predict(\r\n",
+    "            gaussianClassifier, data, target, cv=cv, n_jobs=-1)\r\n",
+    "\r\n",
+    "        decisionScores = cross_val_predict(\r\n",
+    "            decisionClassifier, data, target, cv=cv, n_jobs=-1)\r\n",
+    "\r\n",
+    "        knnScores = cross_val_predict(\r\n",
+    "            knnClassifier, data, target, cv=cv, n_jobs=-1)\r\n",
+    "\r\n",
+    "        scores.append(gaussianScores)\r\n",
+    "        scores.append(decisionScores)\r\n",
+    "        scores.append(knnScores)\r\n",
+    "\r\n",
+    "    for score in scores:\r\n",
+    "            \r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n",
+      "9\n",
+      "15\n",
+      "21\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Dúvidas: Como eu dou o fit no Heterogen"
+   ],
    "metadata": {}
   }
  ],
@@ -48,7 +204,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.6",
+   "version": "3.8.5",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -60,10 +216,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3.8.5 32-bit"
   },
   "interpreter": {
-   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   "hash": "a97cea9040a71f963f6525d18201786996e5c5add084f4c8fbf988376b1b48ba"
   }
  },
  "nbformat": 4,
