Termino da aula 4.1

--- a/Exercicios/Sistemas Inteligentes/4.1 - Árvores de Decisão e Bayesiano Gaussiano.ipynb
+++ b/Exercicios/Sistemas Inteligentes/4.1 - Árvores de Decisão e Bayesiano Gaussiano.ipynb
@@ -408,9 +408,116 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\r\n",
+    "from sklearn.model_selection import GridSearchCV, RepeatedStratifiedKFold, cross_val_score\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn import datasets\r\n",
+    "from scipy import stats\r\n",
+    "from sklearn.pipeline import Pipeline\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "wine = datasets.load_wine()\r\n",
+    "data = wine.data\r\n",
+    "target = wine.target\r\n",
+    "\r\n",
+    "scaler = StandardScaler()\r\n",
+    "decisionClassifier = DecisionTreeClassifier()\r\n",
+    "\r\n",
+    "pipeline = Pipeline([(\"scaler\", scaler), (\"classifier\", decisionClassifier)])\r\n",
+    "\r\n",
+    "grade = {'classifier__ccp_alpha': [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]}\r\n",
+    "\r\n",
+    "gridSearch = GridSearchCV(pipeline, scoring='accuracy', param_grid=grade)\r\n",
+    "\r\n",
+    "scores = cross_val_score(gridSearch, data, target, scoring='accuracy', cv=10)\r\n",
+    "\r\n",
+    "print(scores)\r\n",
+    "\r\n",
+    "mean = scores.mean()\r\n",
+    "std = scores.std()\r\n",
+    "lower, upper = stats.norm.interval(0.95, loc=mean, scale=std/np.sqrt(len(scores)))\r\n",
+    "\r\n",
+    "print(\"Mean: \", mean)\r\n",
+    "print(\"Std: \", std)\r\n",
+    "print(\"Accuracy Confidence Interval (95%%): (%0.2f, %0.2f)\\n\" % (lower, upper))\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.77777778 0.61111111 0.61111111 0.83333333 0.83333333 0.77777778\n",
+      " 0.83333333 0.94444444 0.94117647 0.88235294]\n",
+      "Mean:  0.8045751633986928\n",
+      "Std:  0.11092641319517273\n",
+      "Accuracy Confidence Interval (95%): (0.74, 0.87)\n",
+      "\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "3. Explique o que é a pressuposição de independência utilizada no classificador Naive Bayes e porque ela é adotada neste classificador? Qual a possível consequência negativa de sua adoção? Apresente uma alternativa para não adotar a pressuposição e qual a dificuldade em adotá-la? Compare o desempenho em f1 macro do classificador Naive Bayes com os do classificadores Árvore de Decisão (com valores default de hiperparâmetros) e com o classificador aleatório estratificado em uma validação cruzada com 10 folds no dataset breast. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "A pressuposição de independência nada mais é que a não combinação das caracteristicas, não havendo combinação, sendo totalmente independente. Na maioria dos casos essa afirmação é falsa, mas a qualidade dos resultados do Naive Bayes é muito boa. A utilização dessa pressuposição é muito utilizado, pois simplifica o calculo e o consumo computacional. A consequência negativa é que quando os dados tem algum tipo de relação, são ignorados podendo ter falhas na classificação e também pode ocorrer a redundancia de dados. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "from sklearn import datasets\r\n",
+    "from sklearn.tree import DecisionTreeClassifier\r\n",
+    "from sklearn.naive_bayes import GaussianNB\r\n",
+    "from sklearn.dummy import DummyClassifier\r\n",
+    "from sklearn.model_selection import cross_validate\r\n",
+    "from sklearn.metrics import f1_score, make_scorer\r\n",
+    "\r\n",
+    "cancer = datasets.load_breast_cancer()\r\n",
+    "target = cancer.target\r\n",
+    "data = cancer.data\r\n",
+    "\r\n",
+    "gaussianClassifier = GaussianNB()\r\n",
+    "decisionClassifier = DecisionTreeClassifier()\r\n",
+    "zeroClassifier = DummyClassifier(strategy=\"stratified\")\r\n",
+    "\r\n",
+    "gaussianValidators = cross_validate(gaussianClassifier, data, target, cv=10, scoring={'F1_score': make_scorer(f1_score)})\r\n",
+    "decisionValidators = cross_validate(decisionClassifier, data, target, cv=10, scoring={'F1_score': make_scorer(f1_score)})\r\n",
+    "zeroValidators = cross_validate(zeroClassifier, data, target, cv=10, scoring={'F1_score': make_scorer(f1_score)})\r\n",
+    "\r\n",
+    "print(\"F1 Gaussian: \", gaussianValidators['test_F1_score'])\r\n",
+    "print(\"F1 Decision: \", decisionValidators['test_F1_score'])\r\n",
+    "print(\"F1 Zero: \", zeroValidators['test_F1_score'])\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "F1 Gaussian:  [0.95652174 0.90140845 0.92105263 0.94594595 0.95890411 0.97297297\n",
+      " 0.94594595 0.97222222 0.95774648 0.97222222]\n",
+      "F1 Decision:  [0.95652174 0.88888889 0.94594595 0.88571429 0.94594595 0.91666667\n",
+      " 0.91891892 0.95774648 0.92537313 0.94285714]\n",
+      "F1 Zero:  [0.64864865 0.725      0.62686567 0.69333333 0.62857143 0.73239437\n",
+      " 0.62337662 0.6        0.54794521 0.55072464]\n"
+     ]
+    }
    ],
    "metadata": {}
   },
@@ -425,7 +532,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3.8.5 32-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -437,10 +544,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   },
   "interpreter": {
-   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   "hash": "a97cea9040a71f963f6525d18201786996e5c5add084f4c8fbf988376b1b48ba"
   }
  },
  "nbformat": 4,
