Terminando o trabalho de Inteligencia Artificial

--- a/Exercicios/Sistemas Inteligentes/4 - Classificadores.ipynb
+++ b/Exercicios/Sistemas Inteligentes/4 - Classificadores.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "source": [
     "import numpy as np\r\n",
     "import pandas as pd\r\n",
@@ -567,14 +567,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1.         0.93333333 0.9        0.96666667 0.96666667 0.93333333\n",
-      " 0.96666667 0.96666667 0.93333333 0.96666667 0.93333333 0.96666667\n",
-      " 0.96666667 0.93333333 0.96666667 0.9        1.         0.96666667\n",
-      " 1.         0.93333333 1.         0.96666667 0.9        0.93333333\n",
-      " 0.96666667 0.93333333 0.96666667 0.96666667 0.93333333 0.9       ]\n",
+      "[0.86666667 0.96666667 0.96666667 0.96666667 0.96666667 0.9\n",
+      " 0.96666667 0.93333333 0.93333333 0.93333333 0.93333333 0.93333333\n",
+      " 0.96666667 1.         0.93333333 0.93333333 0.93333333 0.96666667\n",
+      " 0.96666667 0.93333333 0.9        0.9        0.93333333 0.9\n",
+      " 0.93333333 0.96666667 0.93333333 0.96666667 0.93333333 0.93333333]\n",
       "\n",
-      "Mean Accuracy: 0.95 Standard Deviation: 0.03\n",
-      "Accuracy Confidence Interval (95%): (0.94, 0.96)\n",
+      "Mean Accuracy: 0.94 Standard Deviation: 0.03\n",
+      "Accuracy Confidence Interval (95%): (0.93, 0.95)\n",
       "\n"
      ]
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "source": [
     "from collections import Counter\r\n",
     "from random import uniform\r\n",
@@ -703,14 +703,68 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
+     "name": "stderr",
      "text": [
-      "[0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4\n",
-      " 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4 0.4]\n",
+      "C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:696: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 687, in _score\n",
+      "    scores = scorer(estimator, X_test, y_test)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 87, in __call__\n",
+      "    score = scorer._score(cached_call, estimator,\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 236, in _score\n",
+      "    y_pred = method_caller(estimator, \"predict\", X)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 53, in _cached_call\n",
+      "    return getattr(estimator, method)(*args, **kwargs)\n",
+      "  File \"<ipython-input-39-a5a6d931bd3f>\", line 32, in predict\n",
+      "    n0 = floor(n*self.cx/100)\n",
+      "TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'\n",
       "\n",
-      "Mean Accuracy: 0.40 Standard Deviation: 0.00\n",
-      "Accuracy Confidence Interval (95%): (0.40, 0.40)\n",
-      "\n"
+      "  warnings.warn(\n",
+      "C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:696: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 687, in _score\n",
+      "    scores = scorer(estimator, X_test, y_test)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 87, in __call__\n",
+      "    score = scorer._score(cached_call, estimator,\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 236, in _score\n",
+      "    y_pred = method_caller(estimator, \"predict\", X)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 53, in _cached_call\n",
+      "    return getattr(estimator, method)(*args, **kwargs)\n",
+      "  File \"<ipython-input-39-a5a6d931bd3f>\", line 32, in predict\n",
+      "    n0 = floor(n*self.cx/100)\n",
+      "TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'\n",
+      "\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:696: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 687, in _score\n",
+      "    scores = scorer(estimator, X_test, y_test)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 87, in __call__\n",
+      "    score = scorer._score(cached_call, estimator,\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 236, in _score\n",
+      "    y_pred = method_caller(estimator, \"predict\", X)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 53, in _cached_call\n",
+      "    return getattr(estimator, method)(*args, **kwargs)\n",
+      "  File \"<ipython-input-39-a5a6d931bd3f>\", line 32, in predict\n",
+      "    n0 = floor(n*self.cx/100)\n",
+      "TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'\n",
+      "\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:696: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 687, in _score\n",
+      "    scores = scorer(estimator, X_test, y_test)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 87, in __call__\n",
+      "    score = scorer._score(cached_call, estimator,\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 236, in _score\n",
+      "    y_pred = method_caller(estimator, \"predict\", X)\n",
+      "  File \"C:\\Users\\Divergente\\AppData\\Local\\Programs\\Python\\Python38-32\\lib\\site-packages\\sklearn\\metrics\\_scorer.py\", line 53, in _cached_call\n",
+      "    return getattr(estimator, method)(*args, **kwargs)\n",
+      "  File \"<ipython-input-39-a5a6d931bd3f>\", line 32, in predict\n",
+      "    n0 = floor(n*self.cx/100)\n",
+      "TypeError: unsupported operand type(s) for *: 'int' and 'NoneType'\n",
+      "\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
