--- a/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "source": [
     "from sklearn import datasets\r\n",
     "from scipy import stats\r\n",
@@ -239,7 +239,7 @@
     "\r\n",
     "    data = pd.DataFrame(auxResult, columns=[\"scores\", \"names\"])\r\n",
     "\r\n",
-    "    sns.boxplot(x='names', y='scores', data=data)\r\n",
+    "    sns.boxplot(x='names', y='scores', data=data, showmeans=True)\r\n",
     "\r\n",
     "\r\n",
     "# digitsResults = Calculate_Digits_Classifiers()\r\n",
@@ -248,13 +248,15 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0.9624183006535947, 0.05282101266419808, 0.9435168913487961, 0.9813197099583932]\n",
-      "[0.9086056644880174, 0.07402511838617856, 0.8821166028271133, 0.9350947261489214]\n",
-      "[0.9774509803921567, 0.03749255316911186, 0.964034689079521, 0.9908672717047925]\n",
-      "[0.9679738562091502, 0.05207883166499703, 0.9493380280838214, 0.986609684334479]\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'HPClassifier' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\GABRIE~1\\AppData\\Local\\Temp/ipykernel_31552/147325580.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    153\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[1;31m# digitsResults = Calculate_Digits_Classifiers()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 155\u001b[1;33m \u001b[0mwineResults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCalculate_Wine_Classifiers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    156\u001b[0m \u001b[1;31m# cancerResults = Calculate_Breast_Cancer_Classifiers()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\GABRIE~1\\AppData\\Local\\Temp/ipykernel_31552/147325580.py\u001b[0m in \u001b[0;36mCalculate_Wine_Classifiers\u001b[1;34m()\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m     \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGet_Wine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m     \u001b[0mclassifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHPClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m     hpResults = Get_Stats(data, target, classifier, {\n\u001b[0;32m     97\u001b[0m                           'classifier__n_Samples': [1, 3, 5, 7]})\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'HPClassifier' is not defined"
      ]
     }
    ],
