Cleaning useless code

--- a/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
@@ -312,12 +312,7 @@
     "\r\n",
     "    result.append(line)\r\n",
     "\r\n",
-    "print(result)\r\n",
-    "\r\n",
-    "_, pTest = ttest_rel(newResults[2][0], newResults[3][0])\r\n",
-    "_, pWilcoxon = wilcoxon(newResults[2][0], newResults[3][0])\r\n",
-    "\r\n",
-    "print(pTest, pWilcoxon)\r\n"
+    "print(result)"
    ],
    "outputs": [
     {
