Finished the Artificial Inteligence's homework

--- a/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0 - Trabalho.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "source": [
     "from sklearn.base import BaseEstimator\r\n",
     "from sklearn.naive_bayes import GaussianNB\r\n",
@@ -95,13 +95,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Geração dos resultados dos classificadores nas diferentes bases"
+    "# Geração dos resultados dos classificadores nas diferentes bases"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "source": [
     "from sklearn import datasets\r\n",
     "from scipy import stats\r\n",
@@ -111,6 +111,7 @@
     "from sklearn.pipeline import Pipeline\r\n",
     "import seaborn as sns\r\n",
     "import numpy as np\r\n",
+    "from tabulate import tabulate\r\n",
     "\r\n",
     "\r\n",
     "def Get_Stats(data, target, classifier, grade={'classifier__n_estimators': [10, 25, 50, 100]}):\r\n",
@@ -175,10 +176,21 @@
     "    hpResults = Get_Stats(data, target, classifier, {\r\n",
     "                          'classifier__n_Samples': [1, 3, 5, 7]})\r\n",
     "\r\n",
-    "    print(baggingResults[1:])\r\n",
-    "    print(adaBoostResults[1:])\r\n",
-    "    print(randomForestResults[1:])\r\n",
-    "    print(hpResults[1:])\r\n",
+    "    print(\"\\n\")\r\n",
+    "\r\n",
+    "    print(\"------------------------ DIGITS --------------------------\")\r\n",
+    "\r\n",
+    "    print(\"Bagging: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
+    "    \r\n",
+    "    print(\"AdaBoost: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
+    "       \r\n",
+    "    print(\"RandomForest: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
+    "        \r\n",
+    "    print(\"Heterogeneous Pooling: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
     "\r\n",
     "    return [baggingResults, adaBoostResults, randomForestResults, hpResults]\r\n",
     "\r\n",
@@ -201,10 +213,21 @@
     "    hpResults = Get_Stats(data, target, classifier, {\r\n",
     "                          'classifier__n_Samples': [1, 3, 5, 7]})\r\n",
     "\r\n",
-    "    print(baggingResults[1:])\r\n",
-    "    print(adaBoostResults[1:])\r\n",
-    "    print(randomForestResults[1:])\r\n",
-    "    print(hpResults[1:])\r\n",
+    "    print(\"\\n\")\r\n",
+    "\r\n",
+    "    print(\"------------------------ WINE --------------------------\")\r\n",
+    "\r\n",
+    "    print(\"Bagging: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
+    "    \r\n",
+    "    print(\"AdaBoost: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
+    "       \r\n",
+    "    print(\"RandomForest: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
+    "        \r\n",
+    "    print(\"Heterogeneous Pooling: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
     "\r\n",
     "    return [baggingResults, adaBoostResults, randomForestResults, hpResults]\r\n",
     "\r\n",
@@ -227,10 +250,21 @@
     "    hpResults = Get_Stats(data, target, classifier, {\r\n",
     "                          'classifier__n_Samples': [1, 3, 5, 7]})\r\n",
     "\r\n",
-    "    print(baggingResults[1:])\r\n",
-    "    print(adaBoostResults[1:])\r\n",
-    "    print(randomForestResults[1:])\r\n",
-    "    print(hpResults[1:])\r\n",
+    "    print(\"\\n\")\r\n",
+    "\r\n",
+    "    print(\"------------------------ BREAST CANCER --------------------------\")\r\n",
+    "\r\n",
+    "    print(\"Bagging: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
+    "    \r\n",
+    "    print(\"AdaBoost: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
+    "       \r\n",
+    "    print(\"RandomForest: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
+    "        \r\n",
+    "    print(\"Heterogeneous Pooling: \")\r\n",
+    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
     "\r\n",
     "    return [baggingResults, adaBoostResults, randomForestResults, hpResults]\r\n",
     "\r\n",
@@ -244,22 +278,11 @@
     "    return accuracies\r\n",
     "\r\n",
     "\r\n",
-    "# digitsResults = Calculate_Digits_Classifiers()\r\n",
-    "# wineResults = Calculate_Wine_Classifiers()\r\n",
+    "digitsResults = Calculate_Digits_Classifiers()\r\n",
+    "wineResults = Calculate_Wine_Classifiers()\r\n",
     "cancerResults = Calculate_Breast_Cancer_Classifiers()\r\n"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0.958395989974937, 0.02335258227190581, 0.9500395292866236, 0.9667524506632504]\n",
-      "[0.967784043441938, 0.023573124466449304, 0.9593486641930407, 0.9762194226908354]\n",
-      "[0.958395989974937, 0.023803394761409358, 0.9498782110733968, 0.9669137688764773]\n",
-      "[0.9537176274018377, 0.0258394315344323, 0.9444712754861604, 0.9629639793175151]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -271,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "source": [
     "def Get_Boxplot(results, names=[\"Bagging\", \"AdaBoost\", \"Random Forest\", \"HP\"]):\r\n",
     "    auxResult = []\r\n",
@@ -282,11 +305,7 @@
     "\r\n",
     "    data = pd.DataFrame(auxResult, columns=[\"scores\", \"names\"])\r\n",
     "\r\n",
-    "    sns.boxplot(x='names', y='scores', data=data, showmeans=True)\r\n",
-    "\r\n",
-    "# Get_Boxplot(Get_Accuracies(digitsResults))\r\n",
-    "# Get_Boxplot(Get_Accuracies(wineResults))\r\n",
-    "Get_Boxplot(Get_Accuracies(cancerResults))"
+    "    sns.boxplot(x='names', y='scores', data=data, showmeans=True)"
    ],
    "outputs": [
     {
@@ -306,6 +325,33 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "Get_Boxplot(Get_Accuracies(digitsResults))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "Get_Boxplot(Get_Accuracies(wineResults))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "Get_Boxplot(Get_Accuracies(cancerResults))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Gerador do T-Student e Wilcoxon"
@@ -314,41 +360,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "source": [
     "from scipy.stats import ttest_rel, wilcoxon\r\n",
+    "from tabulate import tabulate\r\n",
     "\r\n",
-    "# newResults = digitsResults\r\n",
-    "# newResults = wineResults\r\n",
-    "newResults = cancerResults\r\n",
+    "def Print_Tests(newResults):\r\n",
+    "    result = []\r\n",
     "\r\n",
-    "result = []\r\n",
+    "    names = [\"Bagging\", \"AdaBoost\", \"Random Forest\", \"HP\"]\r\n",
     "\r\n",
-    "names = [\"Bagging\", \"AdaBoost\", \"Random Forest\", \"HP\"]\r\n",
+    "    for i, primaryResult in enumerate(newResults):\r\n",
+    "        line = []\r\n",
     "\r\n",
-    "for i, primaryResult in enumerate(newResults):\r\n",
-    "    line = []\r\n",
+    "        for j, secundaryResult in enumerate(newResults):\r\n",
+    "            if(i > j):\r\n",
+    "                _, pTest = ttest_rel(primaryResult[0], secundaryResult[0])\r\n",
+    "                line.append(names[i] + ' | ' + names[j] + ': {:0.4f}'.format(pTest))\r\n",
+    "            elif(j > i):\r\n",
+    "                _, pWilcoxon = wilcoxon(primaryResult[0], secundaryResult[0])\r\n",
+    "                line.append(names[i] + ' | ' + names[j] + ': {:0.4f}'.format(pWilcoxon))\r\n",
+    "            else:\r\n",
+    "                line.append(names[i])\r\n",
     "\r\n",
-    "    for j, secundaryResult in enumerate(newResults):\r\n",
-    "        if(i > j):\r\n",
-    "            _, pTest = ttest_rel(primaryResult[0], secundaryResult[0])\r\n",
-    "            line.append(names[i] + ' | ' + names[j] + ': {:0.4f}'.format(pTest))\r\n",
-    "        elif(j > i):\r\n",
-    "            _, pWilcoxon = wilcoxon(primaryResult[0], secundaryResult[0])\r\n",
-    "            line.append(names[i] + ' | ' + names[j] + ': {:0.4f}'.format(pWilcoxon))\r\n",
-    "        else:\r\n",
-    "            line.append(names[i])\r\n",
+    "        result.append(line)\r\n",
     "\r\n",
-    "    result.append(line)\r\n",
+    "    print(tabulate(result))\r\n",
     "\r\n",
-    "print(result)"
+    "print(\"Digits:\")\r\n",
+    "Print_Tests(digitsResults)\r\n",
+    "print(\"Wine:\")\r\n",
+    "Print_Tests(wineResults)\r\n",
+    "print(\"Cancer:\")\r\n",
+    "Print_Tests(cancerResults)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[['Bagging', 'Bagging | AdaBoost: 0.0268', 'Bagging | Random Forest: 0.7747', 'Bagging | HP: 0.3387'], ['AdaBoost | Bagging: 0.0130', 'AdaBoost', 'AdaBoost | Random Forest: 0.0083', 'AdaBoost | HP: 0.0060'], ['Random Forest | Bagging: 1.0000', 'Random Forest | AdaBoost: 0.0088', 'Random Forest', 'Random Forest | HP: 0.6507'], ['HP | Bagging: 0.2339', 'HP | AdaBoost: 0.0051', 'HP | Random Forest: 0.2930', 'HP']]\n"
+      "-------------------------------  --------------------------------  --------------------------------  --------------------------\n",
+      "Bagging                          Bagging | AdaBoost: 0.0268        Bagging | Random Forest: 0.7747   Bagging | HP: 0.3387\n",
+      "AdaBoost | Bagging: 0.0130       AdaBoost                          AdaBoost | Random Forest: 0.0083  AdaBoost | HP: 0.0060\n",
+      "Random Forest | Bagging: 1.0000  Random Forest | AdaBoost: 0.0088  Random Forest                     Random Forest | HP: 0.6507\n",
+      "HP | Bagging: 0.2339             HP | AdaBoost: 0.0051             HP | Random Forest: 0.2930        HP\n",
+      "-------------------------------  --------------------------------  --------------------------------  --------------------------\n"
      ]
     }
    ],
