Adding Pdf and python files

--- a/Exercicios/Sistemas Inteligentes/0 - Trabalho/0 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0 - Trabalho/0 - Trabalho.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "source": [
     "from sklearn.base import BaseEstimator\r\n",
     "from sklearn.naive_bayes import GaussianNB\r\n",
@@ -64,8 +64,8 @@
     "\r\n",
     "        for index in dataFrame.columns:\r\n",
     "            column = dataFrame[index]\r\n",
-    "            choice = cl.Counter(column).most_common(1)[0][0]\r\n",
-    "            self.getBetterChoice(column)\r\n",
+    "            \r\n",
+    "            choice = self.getBetterChoice(column)\r\n",
     "            result.append(choice)\r\n",
     "\r\n",
     "        return np.asarray(result)\r\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "source": [
     "from sklearn import datasets\r\n",
     "from scipy import stats\r\n",
@@ -218,16 +218,16 @@
     "    print(\"------------------------ WINE --------------------------\")\r\n",
     "\r\n",
     "    print(\"Bagging: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
     "    \r\n",
     "    print(\"AdaBoost: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
     "       \r\n",
     "    print(\"RandomForest: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
     "        \r\n",
     "    print(\"Heterogeneous Pooling: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
     "\r\n",
     "    return [baggingResults, adaBoostResults, randomForestResults, hpResults]\r\n",
     "\r\n",
@@ -255,16 +255,16 @@
     "    print(\"------------------------ BREAST CANCER --------------------------\")\r\n",
     "\r\n",
     "    print(\"Bagging: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], baggingResults[1:]], headers=\"firstrow\"))\r\n",
     "    \r\n",
     "    print(\"AdaBoost: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], adaBoostResults[1:]], headers=\"firstrow\"))\r\n",
     "       \r\n",
     "    print(\"RandomForest: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], randomForestResults[1:]], headers=\"firstrow\"))\r\n",
     "        \r\n",
     "    print(\"Heterogeneous Pooling: \")\r\n",
-    "    print(tabulate([[\"Acurácia\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
+    "    print(tabulate([[\"Média\", \"STD\", \"Inferior\", \"Superior\"], hpResults[1:]], headers=\"firstrow\"))\r\n",
     "\r\n",
     "    return [baggingResults, adaBoostResults, randomForestResults, hpResults]\r\n",
     "\r\n",
@@ -282,7 +282,33 @@
     "wineResults = Calculate_Wine_Classifiers()\r\n",
     "cancerResults = Calculate_Breast_Cancer_Classifiers()\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "\n",
+      "------------------------ DIGITS --------------------------\n",
+      "Bagging: \n",
+      "  Acurácia        STD    Inferior    Superior\n",
+      "----------  ---------  ----------  ----------\n",
+      "  0.952896  0.0161397     0.94712    0.958671\n",
+      "AdaBoost: \n",
+      "  Acurácia        STD    Inferior    Superior\n",
+      "----------  ---------  ----------  ----------\n",
+      "  0.269878  0.0222605    0.261912    0.277844\n",
+      "RandomForest: \n",
+      "  Acurácia         STD    Inferior    Superior\n",
+      "----------  ----------  ----------  ----------\n",
+      "   0.97551  0.00893575    0.972312    0.978708\n",
+      "Heterogeneous Pooling: \n",
+      "  Acurácia        STD    Inferior    Superior\n",
+      "----------  ---------  ----------  ----------\n",
+      "  0.963284  0.0128592    0.958682    0.967885\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
