Finished the metaheuristic's definition

--- a/Exercicios/Sistemas Inteligentes/0.1 - Trabalho/0.1 - Trabalho.ipynb
+++ b/Exercicios/Sistemas Inteligentes/0.1 - Trabalho/0.1 - Trabalho.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "import time\r\n",
     "import random\r\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "import time\r\n",
     "import random\r\n",
@@ -340,9 +340,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "import time\r\n",
+    "\r\n",
+    "def state_size(state, items):\r\n",
+    "    size = 0\r\n",
+    "    for i in range(len(state)):\r\n",
+    "        size += state[i] * items[i][1]\r\n",
+    "    return size\r\n",
+    "\r\n",
+    "def evaluate_state(state, items):\r\n",
+    "    value = 0\r\n",
+    "    for i in range(len(state)):\r\n",
+    "        value += state[i] * items[i][0]\r\n",
+    "    return value\r\n",
+    "\r\n",
+    "def generate_states(initial_state):\r\n",
+    "    states = []\r\n",
+    "    for i in range (len(initial_state)):\r\n",
+    "        aux = initial_state.copy()\r\n",
+    "        aux[i] = initial_state[i] + 1\r\n",
+    "        states.append(aux)\r\n",
+    "    return states\r\n",
     "\r\n",
     "def hill_climbing(max_size, items, max_time):\r\n",
     "    start = time.process_time()\r\n",
@@ -377,6 +397,19 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "from sklearn import datasets\r\n",
+    "\r\n",
+    "wine = datasets.load_wine()\r\n",
+    "data = wine.data\r\n",
+    "target = wine.target\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Classificador Heterogeneous Pooling"
@@ -385,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "from sklearn.base import BaseEstimator\r\n",
     "from sklearn.naive_bayes import GaussianNB\r\n",
@@ -477,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "source": [
     "from sklearn import datasets\r\n",
     "from scipy import stats\r\n",
@@ -660,28 +693,14 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\n",
-      "\n",
-      "------------------------ DIGITS --------------------------\n",
-      "Bagging: \n",
-      "  Acurácia        STD    Inferior    Superior\n",
-      "----------  ---------  ----------  ----------\n",
-      "  0.952896  0.0161397     0.94712    0.958671\n",
-      "AdaBoost: \n",
-      "  Acurácia        STD    Inferior    Superior\n",
-      "----------  ---------  ----------  ----------\n",
-      "  0.269878  0.0222605    0.261912    0.277844\n",
-      "RandomForest: \n",
-      "  Acurácia         STD    Inferior    Superior\n",
-      "----------  ----------  ----------  ----------\n",
-      "   0.97551  0.00893575    0.972312    0.978708\n",
-      "Heterogeneous Pooling: \n",
-      "  Acurácia        STD    Inferior    Superior\n",
-      "----------  ---------  ----------  ----------\n",
-      "  0.963284  0.0128592    0.958682    0.967885\n"
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tabulate'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\GABRIE~1\\AppData\\Local\\Temp/ipykernel_16940/746431495.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtabulate\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtabulate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tabulate'"
      ]
     }
    ],
@@ -817,7 +836,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.5",
+   "version": "3.9.6",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -829,10 +848,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 32-bit"
+   "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "a97cea9040a71f963f6525d18201786996e5c5add084f4c8fbf988376b1b48ba"
+   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
   }
  },
  "nbformat": 4,
